--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jack Simm – Product Designer</title>
   <style>
     body {
@@ -20,12 +20,17 @@
       align-items: center;
       padding: 20px 40px;
       font-weight: 600;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
+      position: sticky;
+      top: 0;
+      background: #d7e5db;
+      z-index: 999;
     }
 
     .left {
       cursor: pointer;
       letter-spacing: 0.5px;
+      padding: 12px 16px;
     }
 
     .dropdown {
@@ -33,7 +38,7 @@
       top: 60px;
       left: 40px;
       background: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 6px;
       display: none;
       flex-direction: column;
@@ -48,28 +53,24 @@
       font-size: 1rem;
     }
 
-    main {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
     .banner-section {
       position: relative;
       width: 100%;
+      height: 70vh;
+      overflow: hidden;
     }
 
     .banner-img {
       width: 100%;
-      height: auto;
-      display: block;
-      max-height: 600px;
+      height: 100%;
       object-fit: cover;
+      object-position: top center;
+      display: block;
     }
 
     .banner-overlay {
       position: absolute;
-      bottom: 60px;
+      bottom: 40px;
       left: 40px;
       display: flex;
       align-items: center;
@@ -77,16 +78,16 @@
       background: rgba(0, 0, 0, 0.5);
       padding: 20px 30px;
       border-radius: 12px;
-      max-width: 90%;
+      max-width: 600px;
     }
 
     .profile-pic {
-      width: 180px;
-      height: 180px;
+      width: 160px;
+      height: 160px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(100%);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       border: 3px solid white;
     }
 
@@ -94,8 +95,9 @@
       margin: 0;
       font-weight: 500;
       color: white;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       letter-spacing: 0.3px;
+      text-align: left;
     }
 
     .container {
@@ -107,7 +109,7 @@
       display: flex;
       flex-direction: column;
       gap: 60px;
-      margin: 60px 0;
+      margin: 60px auto;
     }
 
     h3 {
@@ -150,18 +152,17 @@
     .contact-links a {
       color: #222;
       text-decoration: none;
-      margin: 0 15px;
+      margin: 10px auto;
       display: inline-flex;
       align-items: center;
       font-weight: 600;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      gap: 8px;
     }
 
     .contact-links svg {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
-      vertical-align: middle;
+      width: 22px;
+      height: 22px;
       fill: #222;
       transition: fill 0.3s ease;
     }
@@ -177,35 +178,34 @@
       color: #666;
     }
 
-    /* ===== MOBILE STYLES ===== */
     @media (max-width: 768px) {
-      .banner-img {
-        max-height: 400px;
+      .banner-section {
+        height: 60vh;
       }
 
       .banner-overlay {
-        bottom: auto;
-        top: 30px;
-        left: 20px;
-        right: 20px;
         flex-direction: column;
         align-items: center;
-        text-align: center;
+        bottom: 10%;
+        left: 10%;
+        right: 10%;
         padding: 20px;
+        max-width: unset;
       }
 
       .profile-pic {
-        width: 140px;
-        height: 140px;
-        margin-bottom: 15px;
+        width: 120px;
+        height: 120px;
       }
 
       .titles h2 {
         font-size: 1.4rem;
+        text-align: center;
       }
 
       .container {
-        padding: 30px 20px;
+        margin: 30px 10px;
+        padding: 20px;
       }
     }
   </style>
@@ -266,10 +266,12 @@
       <h3>Contact Me</h3>
       <div class="contact-links">
         <a href="mailto:jack.simm.design@gmail.com">
-          📧 Email Me
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm16 12V8.83l-7.17 5.84a1 1 0 0 1-1.33 0L4 8.83V18h16z"/></svg>
+          Email Me
         </a>
         <a href="https://www.instagram.com/jack_simm_design" target="_blank">
-          📷 Instagram
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-.8c-.4 0-.8.3-.8.8s.3.8.8.8.8-.3.8-.8-.3-.8-.8-.8z"/></svg>
+          Instagram
         </a>
       </div>
     </div>
