--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     .left {
       cursor: pointer;
+      font-size: 1.2rem;
+      padding: 10px;
     }
 
     .dropdown {
@@ -100,8 +102,8 @@
       display: none;
       background: rgba(0, 0, 0, 0.75);
       text-align: center;
-      padding: 20px;
-      margin: 40px 20px;
+      padding: 15px;
+      margin: 20px 16px;
       border-radius: 16px;
       max-width: 400px;
       margin-left: auto;
@@ -170,6 +172,7 @@
       display: inline-flex;
       align-items: center;
       font-weight: 600;
+      padding: 12px 0;
     }
 
     .contact-links svg {
@@ -210,7 +213,11 @@
       }
 
       .banner-section {
-        height: 85vh;
+        height: 70vh;
+      }
+
+      .titles h2 {
+        font-size: 1.1rem;
       }
     }
   </style>
@@ -226,9 +233,9 @@
   </header>
 
   <div class="banner-section">
-    <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
+    <img src="IMG_5572.JPG" alt="Banner Image of Jack Simm" class="banner-img" loading="lazy" />
     <div class="profile-overlay">
-      <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
       <div class="titles">
         <h2>Product Designer</h2>
         <h2>Product Development Manager</h2>
@@ -237,7 +244,7 @@
   </div>
 
   <div class="mobile-profile">
-    <img src="profile.jpg" alt="Jack Simm" />
+    <img src="profile.jpg" alt="Jack Simm" loading="lazy" />
     <h2>Product Designer</h2>
     <h2>Product Development Manager</h2>
   </div>
@@ -274,12 +281,8 @@
   <div class="contact-section">
     <h3>Contact Me</h3>
     <div class="contact-links">
-      <a href="mailto:jack.simm.design@gmail.com">
-        📧 Email Me
-      </a>
-      <a href="https://www.instagram.com/jack_simm_design" target="_blank">
-        📸 Instagram
-      </a>
+      <a href="mailto:jack.simm.design@gmail.com">📧 Email Me</a>
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank">📸 Instagram</a>
     </div>
   </div>
 
