--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     }
 
     .contact-links a:hover svg {
-      stroke: #007f5f;
+      stroke: #333;
     }
 
     footer {
@@ -317,7 +317,7 @@
       menu.style.display = isVisible ? "none" : "flex";
     });
 
-    // Activate feather icons
+    // Feather icons init
     feather.replace();
   </script>
 </body>
