--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     .banner-section {
       width: 100%;
-      height: 120vh;
+      height: 100vh;
       overflow: hidden;
       position: relative;
     }
@@ -240,7 +240,7 @@
   </header>
 
   <div class="banner-section">
-    <img src="IMG_5572.JPG" alt="Banner Image of Jack Simm" class="banner-img" loading="lazy" />
+    <img src="Exploded Organiser.32.jpg" alt="Exploded organiser product render by Jack Simm" class="banner-img" loading="lazy" />
     <div class="profile-overlay">
       <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
       <div class="titles">
@@ -312,7 +312,6 @@
       menu.style.display = "none";
     });
 
-    // Feather icons init
     feather.replace();
   </script>
 </body>
