--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – Product Designer</title>
-  <script src="https://unpkg.com/feather-icons" defer></script>
+  <script src="https://unpkg.com/feather-icons"></script>
   <style>
     body {
       margin: 0;
@@ -26,6 +26,7 @@
       cursor: pointer;
       font-size: 1.2rem;
       padding: 10px;
+      color: #eee;
     }
 
     .dropdown {
@@ -33,7 +34,7 @@
       top: 60px;
       left: 40px;
       background: #2a2a2a;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 6px;
       display: none;
       flex-direction: column;
@@ -47,13 +48,9 @@
       font-weight: 500;
     }
 
-    .dropdown a:hover {
-      background: #3a3a3a;
-    }
-
     .banner-section {
       width: 100%;
-      height: 100vh;
+      height: 120vh;
       overflow: hidden;
       position: relative;
     }
@@ -63,19 +60,21 @@
       height: 100%;
       object-fit: cover;
       object-position: center;
-      display: block;
     }
 
     .profile-overlay {
       position: absolute;
-      bottom: 30px;
-      left: 30px;
-      background: rgba(0, 0, 0, 0.65);
-      padding: 20px;
-      border-radius: 12px;
+      bottom: 60px;
+      left: 50px;
+      background: rgba(0, 0, 0, 0.75);
+      padding: 25px 40px;
+      border-radius: 20px;
       display: flex;
+      flex-direction: row;
       align-items: center;
-      gap: 16px;
+      width: 550px;
+      max-width: 90%;
+      gap: 20px;
     }
 
     .profile-pic {
@@ -103,22 +102,46 @@
 
     .mobile-profile {
       display: none;
+      background: rgba(0, 0, 0, 0.75);
+      text-align: center;
+      padding: 15px;
+      margin: 20px 16px;
+      border-radius: 16px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .mobile-profile img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 3px solid white;
+      margin-bottom: 12px;
+    }
+
+    .mobile-profile h2 {
+      color: white;
+      margin: 5px 0;
+      font-size: 1.2rem;
     }
 
     .container {
       max-width: 1100px;
       background: #2a2a2a;
-      color: #f5f5f5;
       border-radius: 16px;
       padding: 60px;
       margin: 60px auto;
+      color: #f5f5f5;
     }
 
     h3 {
       font-size: 1.6rem;
       margin-bottom: 12px;
       font-weight: 600;
-      color: #ffffff;
+      color: #f5f5f5;
     }
 
     .row {
@@ -145,22 +168,24 @@
       margin-bottom: 40px;
     }
 
+    .contact-links {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-top: 20px;
+    }
+
     .contact-links a {
       color: #f5f5f5;
       text-decoration: none;
-      margin: 0 15px;
-      display: inline-flex;
-      align-items: center;
-      font-weight: 600;
-      padding: 12px 0;
     }
 
     .contact-links i,
     .contact-links svg {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
+      width: 28px;
+      height: 28px;
       stroke: #f5f5f5;
+      transition: stroke 0.3s ease;
     }
 
     .contact-links a:hover svg {
@@ -171,7 +196,7 @@
       text-align: center;
       padding: 20px;
       font-size: 0.9rem;
-      color: #999;
+      color: #aaa;
     }
 
     @media (max-width: 768px) {
@@ -181,30 +206,6 @@
 
       .mobile-profile {
         display: block;
-        background: rgba(0, 0, 0, 0.75);
-        text-align: center;
-        padding: 15px;
-        margin: 20px 16px;
-        border-radius: 16px;
-        max-width: 400px;
-        margin-left: auto;
-        margin-right: auto;
-      }
-
-      .mobile-profile img {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        object-fit: cover;
-        filter: grayscale(100%);
-        border: 3px solid white;
-        margin-bottom: 12px;
-      }
-
-      .mobile-profile h2 {
-        color: white;
-        margin: 5px 0;
-        font-size: 1.2rem;
       }
 
       .container {
@@ -212,9 +213,13 @@
         margin: 30px auto;
       }
 
-      .contact-links a {
-        display: block;
-        margin: 12px auto;
+      .contact-links {
+        flex-direction: row;
+        gap: 30px;
+      }
+
+      .banner-section {
+        height: 70vh;
       }
 
       .titles h2 {
@@ -236,7 +241,7 @@
   <div class="banner-section">
     <img src="Exploded Organiser.32.jpg" alt="Exploded organiser product render by Jack Simm" class="banner-img" loading="lazy" />
     <div class="profile-overlay">
-      <img src="profile.jpg" alt="Jack Simm" class="profile-pic" loading="lazy" />
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
       <div class="titles">
         <h2>Product Designer</h2>
         <h2>Product Development Manager</h2>
@@ -283,10 +288,10 @@
     <h3>Contact Me</h3>
     <div class="contact-links">
       <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
-        <i data-feather="mail"></i> Email Me
+        <i data-feather="mail"></i>
       </a>
       <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Jack Simm on Instagram">
-        <i data-feather="instagram"></i> Instagram
+        <i data-feather="instagram"></i>
       </a>
     </div>
   </div>
@@ -300,10 +305,6 @@
     toggle.addEventListener("click", () => {
       const isVisible = menu.style.display === "flex";
       menu.style.display = isVisible ? "none" : "flex";
-    });
-
-    menu.addEventListener("mouseleave", () => {
-      menu.style.display = "none";
     });
 
     feather.replace();
