--- a/gallery.html
+++ b/gallery.html
@@ -1,174 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gallery – Jack Simm</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #f1f5f2;
-      color: #444;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Jack Simm - Product Designer</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/feather-icons"></script>
+  </head>
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      font-weight: bold;
-      position: relative;
-      background-color: #d7e5db; /* Matches homepage */
-      color: #444; /* Matches homepage text */
-    }
+  <body>
+    <header class="banner-section">
+      <img src="Exploded Organiser.32.jpg" alt="Exploded organiser render" class="banner-img" loading="lazy" />
+      <div class="banner-text">
+        <h1>Jack Simm</h1>
+        <p>Product Designer</p>
+      </div>
+    </header>
 
-    .left {
-      cursor: pointer;
-    }
+    <section class="gallery-section">
+      <h2>Gallery</h2>
+      <div class="gallery-grid">
+        <img src="IMG_5565.JPG" alt="Gallery Image 1" loading="lazy" />
+        <img src="IMG_5566.JPG" alt="Gallery Image 2" loading="lazy" />
+        <img src="IMG_5567.JPG" alt="Gallery Image 3" loading="lazy" />
+        <img src="IMG_5568.JPG" alt="Gallery Image 4" loading="lazy" />
+        <img src="IMG_5569.JPG" alt="Gallery Image 5" loading="lazy" />
+        <img src="IMG_5570.JPG" alt="Gallery Image 6" loading="lazy" />
+        <img src="IMG_5571.JPG" alt="Gallery Image 7" loading="lazy" />
+        <img src="IMG_5572.JPG" alt="Gallery Image 8" loading="lazy" />
+        <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser" loading="lazy" />
+        <img src="untitled.31.jpg" alt="Organiser Render 2" loading="lazy" />
+      </div>
+    </section>
 
-    .dropdown {
-      position: absolute;
-      top: 60px;
-      left: 40px;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 6px;
-      display: none;
-      flex-direction: column;
-      z-index: 10;
-    }
+    <footer class="footer">
+      <div class="contact-links">
+        <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
+          <i data-feather="mail"></i>
+        </a>
+        <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Jack Simm on Instagram">
+          <i data-feather="instagram"></i>
+        </a>
+      </div>
+    </footer>
 
-    .dropdown a {
-      padding: 12px 20px;
-      text-decoration: none;
-      color: #222;
-      border-bottom: 1px solid #eee;
-    }
-
-    .dropdown a:hover {
-      background-color: #f5f5f5;
-    }
-
-    .gallery-container {
-      max-width: 1100px;
-      margin: 40px auto;
-      padding: 0 30px;
-    }
-
-    h1 {
-      color: #2f4f3f;
-      font-size: 2rem;
-    }
-
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .gallery-grid img {
-      width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-
-    .gallery-grid img:hover {
-      transform: scale(1.02);
-    }
-
-    .lightbox {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(255, 255, 255, 0.97);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .lightbox img {
-      max-width: 90%;
-      max-height: 80%;
-      border-radius: 10px;
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-    }
-
-    .lightbox-close {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 2rem;
-      color: #444;
-      text-decoration: none;
-    }
-
-    .lightbox-close:hover {
-      color: #000;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
-    <div class="dropdown" id="dropdownMenu">
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="cv.html">CV</a>
-    </div>
-    <div class="right">Contact</div>
-  </header>
-
-  <div class="gallery-container">
-    <h1>Gallery</h1>
-    <div class="gallery-grid">
-      <img src="plant-pot-hinge.PNG" alt="Plant pot hinge" onclick="openLightbox(this.src)" />
-      <img src="torch.PNG" alt="Torch render" onclick="openLightbox(this.src)" />
-    </div>
-  </div>
-
-  <div class="lightbox" id="lightbox">
-    <a href="#" class="lightbox-close" onclick="closeLightbox()">×</a>
-    <img id="lightbox-img" src="" alt="Enlarged image" />
-  </div>
-
-  <script>
-    function toggleDropdown() {
-      const menu = document.getElementById("dropdownMenu");
-      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
-    }
-
-    function openLightbox(src) {
-      document.getElementById("lightbox-img").src = src;
-      document.getElementById("lightbox").style.display = "flex";
-    }
-
-    function closeLightbox() {
-      document.getElementById("lightbox").style.display = "none";
-    }
-
-    const toggle = document.querySelector(".left");
-    const menu = document.getElementById("dropdownMenu");
-
-    toggle.addEventListener("mouseenter", () => {
-      menu.style.display = "flex";
-    });
-
-    toggle.addEventListener("mouseleave", () => {
-      setTimeout(() => {
-        if (!menu.matches(":hover")) menu.style.display = "none";
-      }, 200);
-    });
-
-    menu.addEventListener("mouseleave", () => {
-      menu.style.display = "none";
-    });
-  </script>
-</body>
+    <script>
+      feather.replace();
+    </script>
+  </body>
 </html>
