--- a/gallery.html
+++ b/gallery.html
@@ -1,51 +1,324 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Jack Simm - Product Designer</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://unpkg.com/feather-icons"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jack Simm – Product Designer</title>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #d7e5db;
+      color: #333;
+    }
 
-  <body>
-    <header class="banner-section">
-      <img src="Exploded Organiser.32.jpg" alt="Exploded organiser render" class="banner-img" loading="lazy" />
-      <div class="banner-text">
-        <h1>Jack Simm</h1>
-        <p>Product Designer</p>
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      font-weight: 600;
+      font-size: 1.1rem;
+    }
+
+    .left {
+      cursor: pointer;
+      font-size: 1.2rem;
+      padding: 10px;
+    }
+
+    .dropdown {
+      position: absolute;
+      top: 60px;
+      left: 40px;
+      background: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 6px;
+      display: none;
+      flex-direction: column;
+      z-index: 10;
+    }
+
+    .dropdown a {
+      padding: 12px 20px;
+      text-decoration: none;
+      color: #222;
+      font-weight: 500;
+    }
+
+    .banner-section {
+      width: 100%;
+      height: 120vh;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .banner-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+
+    .profile-overlay {
+      position: absolute;
+      bottom: 60px;
+      left: 50px;
+      background: rgba(0, 0, 0, 0.75);
+      padding: 25px 40px;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      width: 550px;
+      max-width: 90%;
+      gap: 20px;
+    }
+
+    .profile-pic {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 3px solid white;
+    }
+
+    .titles {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .titles h2 {
+      color: white;
+      margin: 4px 0;
+      font-size: 1.4rem;
+      text-align: left;
+    }
+
+    .mobile-profile {
+      display: none;
+      background: rgba(0, 0, 0, 0.75);
+      text-align: center;
+      padding: 15px;
+      margin: 20px 16px;
+      border-radius: 16px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .mobile-profile img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      filter: grayscale(100%);
+      border: 3px solid white;
+      margin-bottom: 12px;
+    }
+
+    .mobile-profile h2 {
+      color: white;
+      margin: 5px 0;
+      font-size: 1.2rem;
+    }
+
+    .container {
+      max-width: 1100px;
+      background: white;
+      border-radius: 16px;
+      padding: 60px;
+      margin: 60px auto;
+    }
+
+    h3 {
+      font-size: 1.6rem;
+      margin-bottom: 12px;
+      font-weight: 600;
+      color: #222;
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 60px;
+    }
+
+    .column {
+      flex: 1;
+      min-width: 300px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 10px;
+    }
+
+    .contact-section {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .contact-links a {
+      color: #222;
+      text-decoration: none;
+      margin: 0 15px;
+      display: inline-flex;
+      align-items: center;
+      font-weight: 600;
+      padding: 12px 0;
+    }
+
+    .contact-links i,
+    .contact-links svg {
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
+      stroke: #222;
+    }
+
+    .contact-links a:hover svg {
+      stroke: #333;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    @media (max-width: 768px) {
+      .profile-overlay {
+        display: none;
+      }
+
+      .mobile-profile {
+        display: block;
+      }
+
+      .container {
+        padding: 20px;
+        margin: 30px auto;
+      }
+
+      .contact-links a {
+        display: block;
+        margin: 12px auto;
+      }
+
+      .banner-section {
+        height: 70vh;
+      }
+
+      .titles h2 {
+        font-size: 1.1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="dropdown" id="dropdownMenu">
+      <a href="projects.html">Projects</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="cv.html">CV</a>
+    </div>
+  </header>
+
+  <div class="banner-section">
+    <img src="IMG_5572.JPG" alt="Banner Image of Jack Simm" class="banner-img" loading="lazy" />
+    <div class="profile-overlay">
+      <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
+      <div class="titles">
+        <h2>Product Designer</h2>
+        <h2>Product Development Manager</h2>
       </div>
-    </header>
+    </div>
+  </div>
 
-    <section class="gallery-section">
-      <h2>Gallery</h2>
-      <div class="gallery-grid">
-        <img src="IMG_5565.JPG" alt="Gallery Image 1" loading="lazy" />
-        <img src="IMG_5566.JPG" alt="Gallery Image 2" loading="lazy" />
-        <img src="IMG_5567.JPG" alt="Gallery Image 3" loading="lazy" />
-        <img src="IMG_5568.JPG" alt="Gallery Image 4" loading="lazy" />
-        <img src="IMG_5569.JPG" alt="Gallery Image 5" loading="lazy" />
-        <img src="IMG_5570.JPG" alt="Gallery Image 6" loading="lazy" />
-        <img src="IMG_5571.JPG" alt="Gallery Image 7" loading="lazy" />
-        <img src="IMG_5572.JPG" alt="Gallery Image 8" loading="lazy" />
-        <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser" loading="lazy" />
-        <img src="untitled.31.jpg" alt="Organiser Render 2" loading="lazy" />
+  <div class="mobile-profile">
+    <img src="profile.jpg" alt="Jack Simm" loading="lazy" />
+    <h2>Product Designer</h2>
+    <h2>Product Development Manager</h2>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="column">
+        <h3>About Me</h3>
+        <p>
+          I’m a <strong>BA Product Design student</strong> and former <strong>Product Development Manager</strong> with a strong background in manufacturing engineering. I specialise in <strong>user-focused design</strong>, innovative problem-solving, and delivering practical solutions. My experience includes leading design teams, improving operations, and managing projects in fast-paced environments.
+        </p>
       </div>
-    </section>
+      <div class="column">
+        <h3>Experience</h3>
+        <ul>
+          <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
+          <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+          <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
+          <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
+        </ul>
 
-    <footer class="footer">
-      <div class="contact-links">
-        <a href="mailto:jack.simm.design@gmail.com" aria-label="Email Jack Simm">
-          <i data-feather="mail"></i>
-        </a>
-        <a href="https://www.instagram.com/jack_simm_design" target="_blank" aria-label="Jack Simm on Instagram">
-          <i data-feather="instagram"></i>
-        </a>
+        <h3 style="margin-top: 30px;">Skills</h3>
+        <ul>
+          <li><strong>CAD Modelling</strong> (SolidWorks, Shapr3D)</li>
+          <li><strong>Adobe Suite</strong> (Photoshop, Illustrator, InDesign)</li>
+          <li><strong>Rapid Prototyping</strong></li>
+          <li><strong>User-Centred Design</strong></li>
+          <li><strong>Production Coordination</strong></li>
+        </ul>
       </div>
-    </footer>
+    </div>
+  </div>
 
-    <script>
-      feather.replace();
-    </script>
-  </body>
+  <div class="contact-section">
+    <h3>Contact Me</h3>
+    <div class="contact-links">
+      <a href="mailto:jack.simm.design@gmail.com">
+        <i data-feather="mail"></i> Email Me
+      </a>
+      <a href="https://www.instagram.com/jack_simm_design" target="_blank">
+        <i data-feather="instagram"></i> Instagram
+      </a>
+    </div>
+  </div>
+
+  <footer>&copy; 2025 Jack Simm – Portfolio</footer>
+
+  <script>
+    const toggle = document.querySelector(".left");
+    const menu = document.getElementById("dropdownMenu");
+
+    toggle.addEventListener("mouseenter", () => {
+      menu.style.display = "flex";
+    });
+
+    toggle.addEventListener("mouseleave", () => {
+      setTimeout(() => {
+        if (!menu.matches(":hover")) menu.style.display = "none";
+      }, 200);
+    });
+
+    menu.addEventListener("mouseleave", () => {
+      menu.style.display = "none";
+    });
+
+    toggle.addEventListener("click", () => {
+      const isVisible = menu.style.display === "flex";
+      menu.style.display = isVisible ? "none" : "flex";
+    });
+
+    // Feather icons init
+    feather.replace();
+  </script>
+</body>
 </html>
