--- a/gallery.html
+++ b/gallery.html
@@ -7,50 +7,27 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-    }
-
-    .gallery-section {
+      background-color: #111;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
       padding: 40px 20px;
-      background-color: #f5f5f5;
     }
 
-    .gallery-section h2 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 30px;
-      color: #222;
-    }
-
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .gallery-item {
-      display: block;
-      overflow: hidden;
-      border-radius: 10px;
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+      transition: transform 0.3s ease;
       cursor: zoom-in;
     }
 
-    .gallery-item img {
-      width: 100%;
-      height: auto;
-      display: block;
-      transition: transform 0.3s ease;
-      border-radius: 10px;
+    img:hover {
+      transform: scale(1.03);
     }
 
-    .gallery-item:hover img {
-      transform: scale(1.08);
-    }
-
-    /* Lightbox Styles */
     .lightbox {
       position: fixed;
       top: 0;
@@ -67,29 +44,17 @@
     .lightbox img {
       max-width: 90%;
       max-height: 90%;
-      border-radius: 10px;
+      border-radius: 12px;
       cursor: zoom-out;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
     }
   </style>
 </head>
 <body>
 
-  <section class="gallery-section">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <a href="IMG_5565.JPG" class="gallery-item"><img src="IMG_5565.JPG" alt="Gallery Image 1" /></a>
-      <a href="IMG_5566.JPG" class="gallery-item"><img src="IMG_5566.JPG" alt="Gallery Image 2" /></a>
-      <a href="IMG_5567.JPG" class="gallery-item"><img src="IMG_5567.JPG" alt="Gallery Image 3" /></a>
-      <a href="IMG_5568.JPG" class="gallery-item"><img src="IMG_5568.JPG" alt="Gallery Image 4" /></a>
-      <a href="IMG_5569.JPG" class="gallery-item"><img src="IMG_5569.JPG" alt="Gallery Image 5" /></a>
-      <a href="IMG_5570.JPG" class="gallery-item"><img src="IMG_5570.JPG" alt="Gallery Image 6" /></a>
-      <a href="IMG_5571.JPG" class="gallery-item"><img src="IMG_5571.JPG" alt="Gallery Image 7" /></a>
-      <a href="IMG_5572.JPG" class="gallery-item"><img src="IMG_5572.JPG" alt="Gallery Image 8" /></a>
-      <a href="Exploded Organiser.32.jpg" class="gallery-item"><img src="Exploded Organiser.32.jpg" alt="Exploded Organiser 1" /></a>
-      <a href="untitled.31.jpg" class="gallery-item"><img src="untitled.31.jpg" alt="Exploded Organiser 2" /></a>
-    </div>
-  </section>
+  <!-- Three Large Images -->
+  <img src="IMG_5565.JPG" alt="Image 1" loading="lazy" />
+  <img src="IMG_5566.JPG" alt="Image 2" loading="lazy" />
+  <img src="IMG_5567.JPG" alt="Image 3" loading="lazy" />
 
   <!-- Lightbox Container -->
   <div id="lightbox" class="lightbox">
@@ -99,20 +64,28 @@
   <script>
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightbox-img');
-    const galleryItems = document.querySelectorAll('.gallery-item');
+    const images = document.querySelectorAll('body > img');
 
-    galleryItems.forEach(item => {
-      item.addEventListener('click', function(e) {
-        e.preventDefault();
-        const imgSrc = this.querySelector('img').src;
-        lightboxImg.src = imgSrc;
+    images.forEach(img => {
+      img.addEventListener('click', () => {
+        lightboxImg.src = img.src;
         lightbox.style.display = 'flex';
+        document.body.style.overflow = 'hidden';
       });
     });
 
     lightbox.addEventListener('click', () => {
       lightbox.style.display = 'none';
       lightboxImg.src = '';
+      document.body.style.overflow = '';
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') {
+        lightbox.style.display = 'none';
+        lightboxImg.src = '';
+        document.body.style.overflow = '';
+      }
     });
   </script>
 
