--- a/gallery.html
+++ b/gallery.html
@@ -51,10 +51,9 @@
 </head>
 <body>
 
-  <!-- Three Large Images -->
-  <img src="IMG_5565.JPG" alt="Image 1" loading="lazy" />
-  <img src="IMG_5566.JPG" alt="Image 2" loading="lazy" />
-  <img src="IMG_5567.JPG" alt="Image 3" loading="lazy" />
+  <!-- Only Two Large Images -->
+  <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser" loading="lazy" />
+  <img src="untitled.31.jpg" alt="Untitled Design" loading="lazy" />
 
   <!-- Lightbox Container -->
   <div id="lightbox" class="lightbox">
