--- a/gallery.html
+++ b/gallery.html
@@ -8,11 +8,31 @@
     body {
       margin: 0;
       background-color: #111;
+      font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 20px;
       padding: 40px 20px;
+      color: #fff;
+    }
+
+    .home-link {
+      align-self: flex-start;
+      margin-bottom: 20px;
+    }
+
+    .home-link a {
+      text-decoration: none;
+      color: #fff;
+      background-color: #444;
+      padding: 10px 20px;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+
+    .home-link a:hover {
+      background-color: #666;
     }
 
     img {
@@ -51,7 +71,12 @@
 </head>
 <body>
 
-  <!-- Only Two Large Images -->
+  <!-- Homepage Link Section -->
+  <div class="home-link">
+    <a href="index.html">&larr; Return to Homepage</a>
+  </div>
+
+  <!-- Two Large Images -->
   <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser" loading="lazy" />
   <img src="untitled.31.jpg" alt="Untitled Design" loading="lazy" />
 
