--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
     <div class="profile-overlay">
       <img src="profile.jpg" alt="Portrait of Jack Simm" class="profile-pic" />
       <div class="titles">
+        <h2>Jack Simm</h2>
         <h2>Product Designer</h2>
         <h2>Product Development Manager</h2>
       </div>
