--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,7 @@
       max-width: 1100px;
       margin: 40px auto;
       padding: 0 30px;
+      text-align: center;
     }
 
     h1 {
@@ -59,27 +60,12 @@
       margin-bottom: 40px;
     }
 
-    .project {
-      margin-bottom: 60px;
-    }
-
-    .project h2 {
-      font-size: 1.6rem;
-      color: #222;
-      margin-bottom: 10px;
-    }
-
-    .project-description {
-      font-size: 1rem;
-      margin-bottom: 20px;
-      color: #444;
-    }
-
     .project img {
       width: 100%;
-      max-width: 600px;
+      max-width: 700px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      margin-bottom: 40px;
     }
 
     footer {
@@ -106,16 +92,9 @@
     <h1>Projects</h1>
 
     <div class="project">
-      <h2>Self-Watering Plant Pot</h2>
-      <p class="project-description">
-        A modular self-watering plant pot designed with a hinged mechanism for easy maintenance and accessibility. CAD modelled using SolidWorks, this prototype demonstrates ergonomic form and functionality for urban gardening.
-      </p>
-      <img src="images/plant-pot-hinge.png" alt="CAD render of plant pot hinge mechanism" />
-      <img src="plant-pot-hinge.PNG" alt="Hinge close-up render" style="margin-top: 20px;" />
+      <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser View" />
+      <img src="untitled.31.jpg" alt="Exploded Organiser View 2" />
     </div>
-
-    <!-- Additional projects can be added below -->
-
   </div>
 
   <footer>
