--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects – Jack Simm</title>
   <style>
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #0a0a0a;
+      --accent-color: #d7e5db;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #f1f5f2;
-      color: #333;
+      background-color: var(--bg-color);
+      color: var(--text-color);
       font-size: 17px;
       line-height: 1.6;
     }
@@ -19,7 +25,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      background-color: #d7e5db;
+      background-color: var(--accent-color);
       font-weight: 600;
     }
 
@@ -42,35 +48,40 @@
     .dropdown a {
       padding: 12px 20px;
       text-decoration: none;
-      color: #222;
+      color: #111;
       font-weight: 500;
       font-size: 1rem;
     }
 
     .container {
-      max-width: 1100px;
-      margin: 40px auto;
+      max-width: 1200px;
+      margin: 60px auto;
       padding: 0 30px;
       text-align: center;
     }
 
     h1 {
-      color: #2f4f3f;
-      font-size: 2.2rem;
-      margin-bottom: 40px;
+      font-size: 2.5rem;
+      margin-bottom: 60px;
+      color: var(--text-color);
     }
 
     .project img {
       width: 100%;
-      max-width: 700px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      margin-bottom: 40px;
+      max-width: 800px;
+      margin-bottom: 50px;
+      border-radius: 10px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+      transition: transform 0.3s ease;
+    }
+
+    .project img:hover {
+      transform: scale(1.02);
     }
 
     footer {
       text-align: center;
-      padding: 30px;
+      padding: 40px;
       font-size: 0.9rem;
       color: #666;
     }
@@ -124,5 +135,6 @@
       menu.style.display = isVisible ? "none" : "flex";
     });
   </script>
+
 </body>
 </html>
