--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
   <style>
     :root {
       --bg-color: #ffffff;
-      --text-color: #0a0a0a;
-      --accent-color: #d7e5db;
+      --text-color: #1a1a1a;
+      --banner-color: #e9ece5;
     }
 
     body {
@@ -25,8 +25,9 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      background-color: var(--accent-color);
+      background-color: var(--banner-color);
       font-weight: 600;
+      color: var(--text-color);
     }
 
     .left {
