--- a/projects.html
+++ b/projects.html
@@ -5,17 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects – Jack Simm</title>
   <style>
-    :root {
-      --bg-color: #ffffff;
-      --text-color: #1a1a1a;
-      --banner-color: #e9ece5;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
+      background-color: #ffffff;
+      color: #333; /* Text color from homepage */
       font-size: 17px;
       line-height: 1.6;
     }
@@ -25,9 +19,9 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      background-color: var(--banner-color);
+      background-color: #d7e5db; /* Banner color from homepage */
       font-weight: 600;
-      color: var(--text-color);
+      color: #333;
     }
 
     .left {
@@ -64,7 +58,7 @@
     h1 {
       font-size: 2.5rem;
       margin-bottom: 60px;
-      color: var(--text-color);
+      color: #333;
     }
 
     .project img {
