--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background-color: #ffffff;
-      color: #333; /* Text color from homepage */
+      color: #ffffff; /* Set default text to white */
       font-size: 17px;
       line-height: 1.6;
     }
@@ -19,9 +19,9 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      background-color: #d7e5db; /* Banner color from homepage */
+      background-color: #000000; /* Black banner */
       font-weight: 600;
-      color: #333;
+      color: #ffffff;
     }
 
     .left {
@@ -32,7 +32,7 @@
       position: absolute;
       top: 60px;
       left: 40px;
-      background: white;
+      background: #ffffff;
       border-radius: 6px;
       display: none;
       flex-direction: column;
@@ -43,7 +43,7 @@
     .dropdown a {
       padding: 12px 20px;
       text-decoration: none;
-      color: #111;
+      color: #000000;
       font-weight: 500;
       font-size: 1rem;
     }
@@ -58,7 +58,7 @@
     h1 {
       font-size: 2.5rem;
       margin-bottom: 60px;
-      color: #333;
+      color: #000000;
     }
 
     .project img {
@@ -78,7 +78,7 @@
       text-align: center;
       padding: 40px;
       font-size: 0.9rem;
-      color: #666;
+      color: #444;
     }
   </style>
 </head>
@@ -95,7 +95,7 @@
   </header>
 
   <div class="container">
-    <h1>Projects</h1>
+    <h1 style="color: #000000;">Projects</h1>
 
     <div class="project">
       <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser View" />
